- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    6.1, 6.2
 - 
    None
 
- 
        347310eb21facbd03d2168d67d83fdbfd6f6888c (qt/qtbase/dev) 4aae624836871c315d81078c5ae78b082a26bd49 (qt/qtbase/6.1)
 - 
        Qt Quick 3D - 2021 Week 21/22
 
Not having any inputs in a vertex shader is perfectly valid, as is exercised by Quick 3D particles now. With D3D11 creating an input layout object with 0 elements leads to a STATE_CREATION WARNING #420 debug layer warning, when enabled (i.e. when running with QSG_RHI_DEBUG_LAYER=1). This should be handled in QRhi's D3D11 backend by skipping the input layout object creation as appropriate, and rather calling IASetInputLayout with nullptr if there are no inputs.
| For Gerrit Dashboard: QTBUG-94064 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 351401,3 | rhi: d3d: Avoid debug layer warning when having no vertex inputs | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 351736,2 | rhi: d3d: Avoid debug layer warning when having no vertex inputs | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |